@@ -223,6 +223,7 @@ x2goclient (4.0.3.2-0x2go1) unstable; urgency=medium
       path is being used as a pixmap (user photo/session icon.)
     - Add myself to copyright section in the x2goutils headers.
     - Change four spaces per indentation level to two spaces in x2goutils.cpp.
+    - Add fixup_resources() to x2goutils to fix "broken" resource URI's.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 12:49:22 +0100
 
